--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+  <title>Coursera is cool</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great day! YABAYABADOO!</h1>
+<span>Coursera is COOL! I am learning SO much!</span>
+<div> fuck this shit</div>
 </body>
 </html>
