--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Coursera is cool</title>
+	<meta charset="utf-8">
+  	<title>Shopping List!</title>
 </head>
 <body>
-<span>Coursera is COOL! I am learning SO much!</span>
+<header>
+This is the bi-weekly shopping list for Nabil, he&nbsp;is&nbsp;very&nbsp;hardworking.
+<nav>Sponsored links Anime Video Sport</nav>
+</header>
+<section>
+<h1>Shopping List!!</h1>
+<ol>
+	<li>Bananas</li>
+	<li>Sugar</li>
+	<li>Bread</li>
+	<li>Rice</li>
+	<li>Milk</li>
+	<li>Chicken</li>
+</ol>
+</section>
 <div> fuck this shit</div>
+<a href='http://facebook.com/CourseraWebDev' target="_blank" title="facebook page">Our facebook page</a>
 </body>
 </html>
